k8s/hotel-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
        - name: booking
          image: devopszms2024/booking-milan:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hotel
  namespace: backend
spec:
  selector:
    app: hotel
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: grpc
      port: 8001
      targetPort: 8001
